--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
-.canvas {
+.canvas_wrapper_div {
   border: 1px solid black;
   width: 400px;
   height: 400px;
   display: block;
   position: relative;
+  margin-left: 400px;
+  margin-right: 50px;
 }
