--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,31 @@
   margin-left: 400px;
   margin-right: 50px;
 }
+
+.color_box {
+  border: 1px solid black;
+  width: 20px;
+  height: 20px;
+  margin-left: 500px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 5px;
+}
+
+.red_bg {
+  background-color: red;
+}
+
+.black_bg {
+  background-color: black;
+}
+
+.color_box_wrapper {
+  margin-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
