--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,3 +10,32 @@
     margin-right: 50px;
 }
 
+
+.color_box {
+    border: 1px solid black;
+    width: 20px;
+    height: 20px;
+    // background-color: red;
+    margin-left: 500px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 5px;
+}
+
+.red_bg {
+    background-color: red;
+}
+
+.black_bg {
+    background-color: black;
+}
+
+.color_box_wrapper {
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
