--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -54,3 +54,13 @@
   width: 25px;
   height: 25px;
 }
+
+.eraser_wrapper {
+  width: 50px;
+  margin-left: 20%;
+}
+
+.eraser {
+  max-width: 100%;
+  height: auto;
+}
