--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -63,3 +63,14 @@
     width: 25px;
     height: 25px;
 }
+
+.eraser_wrapper {
+    width: 50px;
+    margin-left: 20%;
+}
+
+.eraser {
+    max-width: 100%;
+    height: auto;
+
+}
