--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -16,12 +16,13 @@
     width: 35px;
     height: 35px;
     // background-color: red;
-    margin-left: 500px;
+    // margin-left: 500px;
     // padding-top: 10px;
     // padding-bottom: 10px;
     // padding-left: 10px;
     // padding-right: 10px;
-    margin-top: 5px;
+    margin: 5px;
+    
 }
 
 .red_bg {
@@ -42,11 +43,9 @@
     padding-left: 10px;
     padding-right: 10px;
     height: 90px;
-    border: 1px solid black;
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Two equal columns */
-    grid-template-rows: auto auto; /* Two rows */
-    gap: 10px;
+    grid-template-columns: 5% 5%;
+    // gap: 10px;
 }
 
 .circle {
@@ -69,8 +68,13 @@
     margin-left: 20%;
 }
 
-.eraser {
+.trash_can {
     max-width: 100%;
     height: auto;
 
+}
+
+.draw_tools_wrapper {
+    grid-template-columns: 70% 20% 10%;
+    display: grid;
 }
