Adding some colors

--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -45,6 +45,11 @@
     background-color: yellow;
 }
 
+
+.orange_bg {
+    background-color: orange;
+}
+
 .color_box_wrapper {
     margin-top: 20px;
     // padding-left: 10px;
