--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -34,6 +34,10 @@
   background-color: yellow;
 }
 
+.orange_bg {
+  background-color: orange;
+}
+
 .color_box_wrapper {
   margin-top: 20px;
   display: grid;
