--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,17 +1,22 @@
+body {
+  background-color: #dcdef4;
+  background-image: "../assets/pastel_background.jpg";
+}
+
 .canvas_wrapper_div {
   border: 1px solid black;
   width: 400px;
   height: 400px;
   display: block;
   position: relative;
-  margin-left: 400px;
-  margin-right: 50px;
+  margin: 0 auto;
+  background-color: white;
 }
 
 .color_box {
   border: 1px solid black;
-  width: 40%;
-  height: 80%;
+  width: 1.5em;
+  height: 1.5em;
 }
 
 .red_bg {
@@ -42,6 +47,8 @@
   margin-top: 20px;
   display: grid;
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+  width: 100%;
+  grid-row-gap: 0.5em;
 }
 
 .circle {
@@ -70,11 +77,24 @@
 }
 
 .draw_tools_wrapper {
-  grid-template-columns: 50% 20% 10%;
-  display: grid;
+  margin: 0 auto;
+  width: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5em;
+}
+
+.row_break {
+  width: 100%;
 }
 
 .brushes_wrapper {
-  display: grid;
-  grid-template-columns: 10% 20% 30% 40%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.sw_button {
+  cursor: pointer;
 }
