--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -134,3 +134,9 @@ h1 {
 #canvas-and-chat-wrapper-div {
     display: flex;
 }
+
+#chat-wrapper {
+    border: 1px solid black;
+    width: $width / 2;
+    height: $height / 2;
+}
